--- a/dotnet/server/test/Azure.Mobile.Common.Test/Azure.Mobile.Common.Test.csproj
+++ b/dotnet/server/test/Azure.Mobile.Common.Test/Azure.Mobile.Common.Test.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.TestHost" Version="3.1.6" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="3.1.6" />
   </ItemGroup>
 
