--- a/dotnet/server/test/Azure.Mobile.Server.Test/Azure.Mobile.Server.Test.csproj
+++ b/dotnet/server/test/Azure.Mobile.Server.Test/Azure.Mobile.Server.Test.csproj
@@ -8,10 +8,12 @@
     <FrameworkReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.TestHost" Version="3.1.6" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
     <PackageReference Include="MSTest.TestAdapter" Version="2.1.0" />
     <PackageReference Include="MSTest.TestFramework" Version="2.1.0" />
     <PackageReference Include="coverlet.collector" Version="1.2.0" />
+    <PackageReference Include="System.Text.Json" Version="4.7.2" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\src\Azure.Mobile.Server\Azure.Mobile.Server.csproj" />
