ugh but tabs work

--- a/reactnative/samples/RNBlogClient/package.json
+++ b/reactnative/samples/RNBlogClient/package.json
@@ -19,6 +19,7 @@
     "react-native-reanimated": "^1.10.1",
     "react-native-safe-area-context": "^3.1.1",
     "react-native-screens": "^2.9.0",
+    "react-native-vector-icons": "^7.0.0",
     "react-navigation": "^4.4.0"
   },
   "devDependencies": {
