--- a/reactnative/client/azure-mobile-client/tsconfig.json
+++ b/reactnative/client/azure-mobile-client/tsconfig.json
@@ -17,6 +17,12 @@
     "forceConsistentCasingInFileNames": true,
     "moduleResolution": "node",
     "allowSyntheticDefaultImports": true,
-    "esModuleInterop": true
-  }
+    "esModuleInterop": true,
+
+    "declarationDir": "./types",
+    "outDir": "./dist-esm",
+    "downlevelIteration": true
+  },
+  "exclude": ["node_modules", "./types/**/*.d.ts", "./samples/**/*.ts"],
+  "include": ["./src/**/*.ts", "./test/**/*.ts"]
 }
