--- a/dotnet/client/test/Azure.Mobile.Client.Test/Azure.Mobile.Client.Test.csproj
+++ b/dotnet/client/test/Azure.Mobile.Client.Test/Azure.Mobile.Client.Test.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\samples\E2EServer\E2EServer.csproj" />
+    <ProjectReference Include="..\..\..\server\test\Azure.Mobile.Server.Test.E2EServer\Azure.Mobile.Server.Test.E2EServer.csproj" />
     <ProjectReference Include="..\..\src\Azure.Mobile.Client\Azure.Mobile.Client.csproj" />
   </ItemGroup>
 
