--- a/dotnet/samples/E2EServer/E2EServer.csproj
+++ b/dotnet/samples/E2EServer/E2EServer.csproj
@@ -6,12 +6,13 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.TestHost" Version="3.1.6" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="3.1.6" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.6" />
+    <PackageReference Include="System.Text.Json" Version="4.7.2" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\Azure.Mobile.Server.Entity\Azure.Mobile.Server.Entity.csproj" />
-    <ProjectReference Include="..\..\src\Azure.Mobile.Server\Azure.Mobile.Server.csproj" />
+    <ProjectReference Include="..\..\server\src\Azure.Mobile.Server.Entity\Azure.Mobile.Server.Entity.csproj" />
   </ItemGroup>
 
 
