--- a/reactnative/client/azure-mobile-client/package.json
+++ b/reactnative/client/azure-mobile-client/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "@azure/react-native-client",
+  "name": "@azure/mobile-client",
+  "sdk-type": "client",
   "version": "1.0.0-beta.1",
   "description": "Azure Mobile SDK for JS.",
   "author": "Microsoft Corporation",
@@ -31,22 +32,27 @@
   "files": [
     "dist/",
     "dist-esm/src/",
-    "typings/azure-mobile-apps.d.ts"
+    "types/latest/",
+    "types/3.1/"
   ],
   "scripts": {
     "build": "tsc -p . && rollup -c 2>&1 && npm run extract-api && npm run build:types",
     "build:node": "tsc -p . && cross-env ONLY_NODE=true rollup -c 2>&1 && npm run extract-api",
     "build:browser": "tsc -p . && cross-env ONLY_BROWSER=true rollup -c 2>&1",
     "build:test": "npm run build:test:node && npm run build:test:browser",
-    "build:test:node": "tsc -p . && cross-env ONLY_NODE=true rollup -c rollup.test.config.js 2>&1",
     "build:test:browser": "tsc -p . && cross-env ONLY_BROWSER=true rollup -c rollup.test.config.js 2>&1",
+    "build:test:node": "tsc -p . && cross-env ONLY_NODE=true rollup -c rollup.test.config.js 2>&1",
+    "build:types": "downlevel-dts types/latest types/3.1",
     "check-format": "prettier --list-different --config ../../.prettierrc.json --ignore-path ../../.prettierignore \"src/**/*.ts\" \"test/**/*.ts\" \"*.{js,json}\"",
     "clean": "rimraf dist dist-esm test-dist types *.tgz *.log",
     "extract-api": "tsc -p . && api-extractor run --local",
     "format": "prettier --write --config ../../.prettierrc.json --ignore-path ../../.prettierignore \"src/**/*.ts\" \"test/**/*.ts\" \"*.{js,json}\"",
     "pack": "npm pack 2>&1",
     "prebuild": "npm run clean",
-    "test": "npm run clean && npm run build:test && npm run unit-test"
+    "test": "npm run clean && npm run build:test && npm run unit-test",
+    "unit-test:browser": "echo skipped",
+    "unit-test:node": "echo skipped",
+    "unit-test": "npm run unit-test:node && npm run unit-test:browser"
   },
   "dependencies": {
     "@azure/abort-controller": "^1.0.0",
@@ -57,7 +63,6 @@
     "azure-query-js": "^0.1.0",
     "buffer": "^5.2.1",
     "process": "^0.11.10",
-    "rhea-promise": "^1.0.0",
     "tslib": "^2.0.0",
     "uuid": "^8.1.0"
   },
@@ -118,6 +123,7 @@
     "rollup-plugin-shim": "^1.0.0",
     "rollup-plugin-sourcemaps": "^0.4.2",
     "rollup-plugin-terser": "^5.1.1",
+    "rollup-plugin-uglify": "^6.0.0",
     "sinon": "^9.0.2",
     "ts-node": "^8.3.0",
     "typescript": "~3.9.3",
