Fixing build issues and adding test.

--- a/.gitignore
+++ b/.gitignore
@@ -371,3 +371,6 @@ MigrationBackup/
 
 # End of https://www.toptal.com/developers/gitignore/api/visualstudio,visualstudiocode
 reactnative/client/azure-mobile-client/package-lock.json
+
+# Common toolchain intermediate files
+temp/
