--- a/reactnative/client/azure-mobile-client/package.json
+++ b/reactnative/client/azure-mobile-client/package.json
@@ -86,8 +86,8 @@
     "@types/sinon": "^9.0.4",
     "@types/uuid": "^8.0.0",
     "@types/ws": "^7.2.4",
-    "@typescript-eslint/eslint-plugin": "^2.0.0",
-    "@typescript-eslint/parser": "^2.0.0",
+    "@typescript-eslint/eslint-plugin": "^2.27.0",
+    "@typescript-eslint/parser": "^2.27.0",
     "assert": "^1.4.1",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
@@ -96,11 +96,11 @@
     "debug": "^4.1.1",
     "dotenv": "^8.2.0",
     "downlevel-dts": "~0.4.0",
-    "eslint": "^6.1.0",
-    "eslint-config-prettier": "^6.0.0",
+    "eslint": "^6.5.1",
+    "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-no-null": "^1.0.2",
-    "eslint-plugin-no-only-tests": "^2.3.0",
-    "eslint-plugin-promise": "^4.1.1",
+    "eslint-plugin-no-only-tests": "^2.4.0",
+    "eslint-plugin-promise": "^4.2.1",
     "esm": "^3.2.18",
     "karma": "^5.1.0",
     "karma-chrome-launcher": "^3.0.0",
@@ -116,7 +116,7 @@
     "mocha": "^7.1.1",
     "mocha-junit-reporter": "^1.18.0",
     "nyc": "^14.0.0",
-    "prettier": "^1.16.4",
+    "prettier": "^2.0.4",
     "puppeteer": "^3.3.0",
     "rimraf": "^3.0.0",
     "rollup": "^1.16.3",
@@ -126,7 +126,7 @@
     "rollup-plugin-uglify": "^6.0.0",
     "sinon": "^9.0.2",
     "ts-node": "^8.3.0",
-    "typescript": "~3.9.3",
+    "typescript": "^3.9.3",
     "ws": "^7.1.1"
   }
 }
