--- a/reactnative/samples/RNBlogClient/package.json
+++ b/reactnative/samples/RNBlogClient/package.json
@@ -39,7 +39,8 @@
     "react-native-safe-area-context": "^3.1.1",
     "react-native-screens": "^2.9.0",
     "react-native-vector-icons": "^7.0.0",
-    "react-navigation": "^4.4.0"
+    "react-navigation": "^4.4.0",
+    "@azure/mobile-client": "~1.0.0-beta.1"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
