--- a/reactnative/samples/RNBlogClient/ios/RNBlogClient/Info.plist
+++ b/reactnative/samples/RNBlogClient/ios/RNBlogClient/Info.plist
@@ -53,6 +53,15 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>CFBundleURLTypes</key>
+		<array>
+			<dict>
+				<key>CFBundleURLSchemes</key>
+				<array>
+					<string>msal9b4331c9-5eec-4a7c-aff6-0716ee61ac96</string>
+				</array>
+			</dict>
+		</array>
 	<key>UIAppFonts</key>
 	<array>
 		<string>FontAwesome.ttf</string>
