--- a/reactnative/samples/RNBlogClient/package.json
+++ b/reactnative/samples/RNBlogClient/package.json
@@ -20,7 +20,8 @@
   "scripts": {
     "build": "echo skipped",
     "android": "react-native run-android",
-    "ios": "react-native run-ios",
+    "ios": "npm run ios:prepare && react-native run-ios",
+    "ios:prepare": "pod install",
     "start": "react-native start",
     "test": "jest",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
@@ -42,7 +43,8 @@
     "react-navigation": "^4.4.0",
     "@azure/mobile-client": "~1.0.0-beta.1",
     "@types/react": "~16.9.43",
-    "@azure/identity": "^1.0.3"
+    "@azure/identity": "^1.0.3",
+    "@react-native-community/cli-platform-android": "~4.10.1"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
