Added appsettings.Test.json and associated setup

--- a/dotnet/server/test/Azure.Mobile.Server.Test.E2EServer/Azure.Mobile.Server.Test.E2EServer.csproj
+++ b/dotnet/server/test/Azure.Mobile.Server.Test.E2EServer/Azure.Mobile.Server.Test.E2EServer.csproj
@@ -15,5 +15,11 @@
     <ProjectReference Include="..\..\src\Azure.Mobile.Server\Azure.Mobile.Server.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="appsettings.Test.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
 
 </Project>
