--- a/dotnet/server/test/Azure.Mobile.Server.Test.E2EServer/Azure.Mobile.Server.Test.E2EServer.csproj
+++ b/dotnet/server/test/Azure.Mobile.Server.Test.E2EServer/Azure.Mobile.Server.Test.E2EServer.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.6" />
     <PackageReference Include="Microsoft.AspNetCore.TestHost" Version="3.1.6" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.1.6" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.6" />
   </ItemGroup>
 
