Added the Xamarin Forms edition

--- a/dotnet/samples/Todo.NetStandard.Common/Todo.NetStandard.Common.csproj
+++ b/dotnet/samples/Todo.NetStandard.Common/Todo.NetStandard.Common.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="sqlite-net-pcl" Version="1.7.335" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\client\src\Azure.Mobile.Client\Azure.Mobile.Client.csproj" />
   </ItemGroup>
 
