--- a/dotnet/samples/Todo.XamarinForms/Todo.XamarinForms/Todo.XamarinForms.csproj
+++ b/dotnet/samples/Todo.XamarinForms/Todo.XamarinForms/Todo.XamarinForms.csproj
@@ -14,4 +14,14 @@
     <PackageReference Include="Xamarin.Forms" Version="4.5.0.495" />
     <PackageReference Include="Xamarin.Essentials" Version="1.3.1" />
   </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\Todo.NetStandard.Common\Todo.NetStandard.Common.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Views\TodoListPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+  </ItemGroup>
 </Project>
