--- a/dotnet/samples/Todo.XamarinForms/Todo.XamarinForms.iOS/Todo.XamarinForms.iOS.csproj
+++ b/dotnet/samples/Todo.XamarinForms/Todo.XamarinForms.iOS/Todo.XamarinForms.iOS.csproj
@@ -123,8 +123,8 @@
     <Reference Include="System.Numerics.Vectors" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Xamarin.Forms" Version="4.5.0.495" />
-    <PackageReference Include="Xamarin.Essentials" Version="1.3.1" />
+    <PackageReference Include="Xamarin.Forms" Version="4.7.0.1239" />
+    <PackageReference Include="Xamarin.Essentials" Version="1.5.3.2" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <ItemGroup>
@@ -132,5 +132,11 @@
       <Project>{41E203F0-96F9-46BB-AC5F-C53CE7A28133}</Project>
       <Name>Todo.XamarinForms</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="additem.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="completed.png" />
   </ItemGroup>
 </Project>
