--- a/dotnet/samples/Todo.AspNetCore.Server/Todo.AspNetCore.Server.csproj
+++ b/dotnet/samples/Todo.AspNetCore.Server/Todo.AspNetCore.Server.csproj
@@ -2,10 +2,15 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <UserSecretsId>5eed77a9-f1ec-47f6-8d3b-737cf02e014b</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.6" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.3">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.Identity.Web" Version="0.2.1-preview" />
     <PackageReference Include="System.Text.Json" Version="4.7.2" />
   </ItemGroup>
