Fixed the DbInitializer to only initialize once

--- a/dotnet/e2etest/Microsoft.Zumo.E2EServer/appsettings.Development.json
+++ b/dotnet/e2etest/Microsoft.Zumo.E2EServer/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "MS_TableConnectionString": "Data Source=(localdb)\\mssqllocaldb;Database=TodoItems;Trusted_Connection=True;"
+    "MS_TableConnectionString": "Data Source=(localdb)\\mssqllocaldb;Database=zumo-e2etest-db;Trusted_Connection=True;"
   },
   "Logging": {
     "LogLevel": {
