--- a/dotnet/e2etest/Microsoft.Zumo.E2EServer/Properties/launchSettings.json
+++ b/dotnet/e2etest/Microsoft.Zumo.E2EServer/Properties/launchSettings.json
@@ -21,7 +21,7 @@
       "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "tables/movies",
-      "applicationUrl": "https://localhost:5001;http://localhost:5000",
+      "applicationUrl": "https://*:5001;http://*:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
