(#172) Allowed all fields to be filtered

--- a/dotnet/.gitignore
+++ b/dotnet/.gitignore
@@ -184,11 +184,15 @@ publish/
 # but database connection strings (with potential passwords) will be unencrypted
 *.pubxml
 *.publishproj
+*.arm.json
+Properties/serviceDependencies.*\ Web\ Deploy.json
 
 # Microsoft Azure Web App publish settings. Comment the next line if you want to
 # checkin your Azure Web App publish settings, but sensitive information contained
 # in these scripts will be unencrypted
 PublishScripts/
+Properties/PublishProfiles/
+Properties/ServiceDependencies/
 
 # NuGet Packages
 *.nupkg
