--- a/dotnet/e2etest/Microsoft.Zumo.E2EServer/Microsoft.Zumo.E2EServer.csproj
+++ b/dotnet/e2etest/Microsoft.Zumo.E2EServer/Microsoft.Zumo.E2EServer.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.1.7" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.7" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.7">
