Initial version of the Android app

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
-
 # Created by https://www.toptal.com/developers/gitignore/api/visualstudio,visualstudiocode
 # Edit at https://www.toptal.com/developers/gitignore?templates=visualstudio,visualstudiocode
+
+### MkDocs ###
+site/
 
 ### VisualStudioCode ###
 .vscode/*
