Added initial HOW-TO for Android

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -25,6 +25,7 @@ markdown_extensions:
       permalink: true
   - pymdownx.highlight
   - pymdownx.superfences
+  - pymdownx.tabbed
   - markdown_include.include:
       base_path: docs
 plugins:
