--- a/samples/xamarin-forms/ZumoQuickstart/ZumoQuickstart/ZumoQuickstart.csproj
+++ b/samples/xamarin-forms/ZumoQuickstart/ZumoQuickstart/ZumoQuickstart.csproj
@@ -17,4 +17,10 @@
     <PackageReference Include="Xamarin.Forms" Version="4.8.0.1687" />
     <PackageReference Include="Xamarin.Essentials" Version="1.5.3.2" />
   </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="TodoListPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+  </ItemGroup>
 </Project>
