Xamarin Forms initial version

--- a/samples/xamarin-forms/ZumoQuickstart/ZumoQuickstart.Android/ZumoQuickstart.Android.csproj
+++ b/samples/xamarin-forms/ZumoQuickstart/ZumoQuickstart.Android/ZumoQuickstart.Android.csproj
@@ -74,6 +74,8 @@
     <None Include="Properties\AndroidManifest.xml" />
   </ItemGroup>
   <ItemGroup>
+    <AndroidResource Include="Resources\drawable\additem.png" />
+    <AndroidResource Include="Resources\drawable\completed.png" />
     <AndroidResource Include="Resources\layout\Tabbar.xml" />
     <AndroidResource Include="Resources\layout\Toolbar.xml" />
     <AndroidResource Include="Resources\values\styles.xml" />
