--- a/samples/xamarin-forms/ZumoQuickstart/ZumoQuickstart.UWP/ZumoQuickstart.UWP.csproj
+++ b/samples/xamarin-forms/ZumoQuickstart/ZumoQuickstart.UWP/ZumoQuickstart.UWP.csproj
@@ -103,6 +103,8 @@
     </AppxManifest>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="additem.png" />
+    <Content Include="completed.png" />
     <Content Include="Assets\LargeTile.scale-100.png" />
     <Content Include="Assets\LargeTile.scale-200.png" />
     <Content Include="Assets\LargeTile.scale-400.png" />
