--- a/samples/xamarin-forms/ZumoQuickstart/ZumoQuickstart.iOS/ZumoQuickstart.iOS.csproj
+++ b/samples/xamarin-forms/ZumoQuickstart/ZumoQuickstart.iOS/ZumoQuickstart.iOS.csproj
@@ -115,6 +115,10 @@
     </ImageAsset>
   </ItemGroup>
   <ItemGroup>
+    <BundleResource Include="additem.png" />
+    <BundleResource Include="completed.png" />
+  </ItemGroup>
+  <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Core" />
