--- a/samples/xamarin-forms/ZumoQuickstart/ZumoQuickstart.UWP/ZumoQuickstart.UWP.csproj
+++ b/samples/xamarin-forms/ZumoQuickstart/ZumoQuickstart.UWP/ZumoQuickstart.UWP.csproj
@@ -105,6 +105,7 @@
   <ItemGroup>
     <Content Include="additem.png" />
     <Content Include="completed.png" />
+    <Content Include="refresh.png" />
     <Content Include="Assets\LargeTile.scale-100.png" />
     <Content Include="Assets\LargeTile.scale-200.png" />
     <Content Include="Assets\LargeTile.scale-400.png" />
