--- a/samples/xamarin-forms/ZumoQuickstart/ZumoQuickstart.iOS/ZumoQuickstart.iOS.csproj
+++ b/samples/xamarin-forms/ZumoQuickstart/ZumoQuickstart.iOS/ZumoQuickstart.iOS.csproj
@@ -117,6 +117,7 @@
   <ItemGroup>
     <BundleResource Include="additem.png" />
     <BundleResource Include="completed.png" />
+    <BundleResource Include="refresh.png" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System" />
