Added add-item and select-item event handlers to WPF

--- a/samples/wpf/ZumoQuickstart.csproj
+++ b/samples/wpf/ZumoQuickstart.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="Nito.AsyncEx" Version="5.1.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Images\" />
+  </ItemGroup>
+
 </Project>
