Added offline updates for WPF quickstart

--- a/samples/wpf/ZumoQuickstart.csproj
+++ b/samples/wpf/ZumoQuickstart.csproj
@@ -7,13 +7,19 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Images\additem.png" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.Azure.Mobile.Client" Version="4.2.0" />
     <PackageReference Include="Microsoft.Azure.Mobile.Client.SQLiteStore" Version="4.2.0" />
     <PackageReference Include="Nito.AsyncEx" Version="5.1.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Images\" />
+    <Resource Include="Images\additem.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
   </ItemGroup>
 
 </Project>
