Added refresh icon

--- a/samples/wpf/ZumoQuickstart.csproj
+++ b/samples/wpf/ZumoQuickstart.csproj
@@ -20,6 +20,9 @@
     <Resource Include="Images\additem.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
+    <Resource Include="Images\refresh.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
   </ItemGroup>
 
 </Project>
