--- a/samples/ios/Podfile
+++ b/samples/ios/Podfile
@@ -1,10 +1,11 @@
 # Uncomment the next line to define a global platform for your project
-platform :ios, '121212121212121212121212.0'
+platform :ios, '12.0'
 
 target 'ZumoQuickstart' do
   # Comment the next line if you don't want to use dynamic frameworks
   use_frameworks!
 
   # Pods for ZumoQuickstart
+  pod 'MicrosoftAzureMobile', '~> 3.4'
 
 end
