Added q to package for cordova

--- a/samples/cordova/package.json
+++ b/samples/cordova/package.json
@@ -19,5 +19,8 @@
       "cordova-plugin-whitelist": {},
       "cordova-plugin-ms-azure-mobile-apps": {}
     }
+  },
+  "dependencies": {
+    "q": "^1.5.1"
   }
 }
