--- a/samples/cordova/package.json
+++ b/samples/cordova/package.json
@@ -11,10 +11,10 @@
   "author": "Microsoft, Inc.",
   "license": "MIT",
   "devDependencies": {
-    "cordova-plugin-inappbrowser": "^1.5.0",
-    "cordova-plugin-ms-azure-mobile-apps": "^2.0.2",
+    "cordova-plugin-inappbrowser": "1.5.0",
+    "cordova-plugin-ms-azure-mobile-apps": "2.0.2",
     "cordova-plugin-whitelist": "^1.3.4",
-    "cordova-sqlite-storage": "^2.2.0"
+    "cordova-sqlite-storage": "2.2.0"
   },
   "cordova": {
     "plugins": {
