--- a/sdk/dotnet/test/Microsoft.AzureMobile.WebService.Test/Microsoft.AzureMobile.WebService.Test.csproj
+++ b/sdk/dotnet/test/Microsoft.AzureMobile.WebService.Test/Microsoft.AzureMobile.WebService.Test.csproj
@@ -4,4 +4,10 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\Microsoft.AzureMobile.Server.InMemory\Microsoft.AzureMobile.Server.InMemory.csproj" />
+    <ProjectReference Include="..\..\src\Microsoft.AzureMobile.Server\Microsoft.AzureMobile.Server.csproj" />
+    <ProjectReference Include="..\Microsoft.AzureMobile.Common.Test\Microsoft.AzureMobile.Common.Test.csproj" />
+  </ItemGroup>
+
 </Project>
