--- a/sdk/dotnet/test/Microsoft.AzureMobile.WebService.Test/Microsoft.AzureMobile.WebService.Test.csproj
+++ b/sdk/dotnet/test/Microsoft.AzureMobile.WebService.Test/Microsoft.AzureMobile.WebService.Test.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.IO.RecyclableMemoryStream" Version="2.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\src\Microsoft.AzureMobile.Server.InMemory\Microsoft.AzureMobile.Server.InMemory.csproj" />
     <ProjectReference Include="..\..\src\Microsoft.AzureMobile.Server\Microsoft.AzureMobile.Server.csproj" />
     <ProjectReference Include="..\Microsoft.AzureMobile.Common.Test\Microsoft.AzureMobile.Common.Test.csproj" />
