--- a/sdk/dotnet/src/Microsoft.AzureMobile.Server/Microsoft.AzureMobile.Server.csproj
+++ b/sdk/dotnet/src/Microsoft.AzureMobile.Server/Microsoft.AzureMobile.Server.csproj
@@ -1,8 +1,21 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
+    <PackageId>Microsoft.AzureMobile.Server</PackageId>
+    <Authors>Microsoft Corporation</Authors>
+    <Company>Microsoft Corporation</Company>
     <TargetFramework>net5.0</TargetFramework>
     <LangVersion>9.0</LangVersion>
     <Version>5.0.0-preview1</Version>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
+    <Description>The main ASP.NET Core service library for generating an Azure Mobile Apps web service.  In addition, you will need to add a repository and requirements.</Description>
+    <Copyright>Copyright (c) 2021 Microsoft Corporation.</Copyright>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <ProjectUrl>https://github.com/azure/azure-mobile-apps</ProjectUrl>
+    <RepositoryUrl>https://github.com/azure/azure-mobile-apps</RepositoryUrl>
+    <PackageTags>microsoft aspnetcore azure cloud mobile webapi</PackageTags>
+    <NeutralLanguage>en</NeutralLanguage>
+    <IconUrl>http://go.microsoft.com/fwlink/?LinkID=288890</IconUrl>
   </PropertyGroup>
   <ItemGroup>
     <FrameworkReference Include="Microsoft.AspNetCore.App" />
@@ -12,5 +25,15 @@
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="5.0.5" />
     <PackageReference Include="Microsoft.AspNetCore.OData" Version="7.5.7" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="..\..\..\..\LICENSE.txt">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
+    <None Include="C:\Users\adrian\OneDrive\Pictures\Screenshots\2020-12-24 (1).png">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
   </ItemGroup>
 </Project>
