--- a/sdk/dotnet/test/Microsoft.AzureMobile.WebService.Test/Microsoft.AzureMobile.WebService.Test.csproj
+++ b/sdk/dotnet/test/Microsoft.AzureMobile.WebService.Test/Microsoft.AzureMobile.WebService.Test.csproj
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <IncludeBuildOutput>false</IncludeBuildOutput>
+    <IsPackable>false</IsPackable>
   </PropertyGroup>
 
   <ItemGroup>
