Fixed Package Reference for InMemory

--- a/sdk/dotnet/src/Microsoft.AzureMobile.Server.InMemory/Microsoft.AzureMobile.Server.InMemory.csproj
+++ b/sdk/dotnet/src/Microsoft.AzureMobile.Server.InMemory/Microsoft.AzureMobile.Server.InMemory.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <PackageId>Microsoft.AzureMobile.Server.EFCore</PackageId>
+    <PackageId>Microsoft.AzureMobile.Server.InMemory</PackageId>
     <Authors>Microsoft Corporation</Authors>
     <Company>Microsoft Corporation</Company>
     <TargetFramework>net5.0</TargetFramework>
